# ChangeLog for sys-apps/coreboot
# Copyright 2010 Funtoo Technologies, LLC; Distributed under the GPL v2

  23 May 2010; Daniel Robbins <drobbins@funtoo.org> +boot-update-1.4.5.ebuild:
  renaming to sys-boot/boot-update.

*coreboot-1.4.5 (07 Apr 2010)

  07 Apr 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.5.ebuild:
  bug fix release for liveCDs.

*coreboot-1.4.4 (02 Apr 2010)

  02 Apr 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.4.ebuild:
  bug fix release for grub.

*coreboot-1.4.3 (01 Apr 2010)

  01 Apr 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.3.ebuild:
  Bug fix release that should resolve some outstanding bugs related to 
  grub-legacy support.

*coreboot-1.4.2 (16 Mar 2010)

  16 Mar 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.2.ebuild:
  Maintenance/doc update release.

*coreboot-1.4.1 (11 Mar 2010)

  11 Mar 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.1.ebuild:
  new version for unstable that works correctly with new grub-legacy-0.97-r11,
  which uses /boot/grub-legacy/ as the grub.conf dir. This pkg should move
  to stable in sync with sys-boot/grub-legacy-0.97-r11

*coreboot-1.4 (25 Feb 2010)

  25 Feb 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.4.ebuild:
  new non-beta release.

*coreboot-1.4_beta3 (21 Feb 2010)

  21 Feb 2010; Daniel Robbins <drobbins@funtoo.org>
  +coreboot-1.4_beta4.ebuild: new feature release.

*coreboot-1.4_beta3 (21 Feb 2010)

  21 Feb 2010; Daniel Robbins <drobbins@funtoo.org>
  +coreboot-1.4_beta3.ebuild: new bug fix/new feature release.

*coreboot-1.4_beta2 (12 Feb 2010)

  12 Feb 2010; Daniel Robbins <drobbins@funtoo.org>
  +coreboot-1.4_beta2.ebuild: another beta release.

*coreboot-1.4_beta1 (08 Feb 2010)

  08 Feb 2010; Daniel Robbins <drobbins@funtoo.org>
  +coreboot-1.4_beta1.ebuild: new beta release.

*coreboot-1.3 (29 Jan 2010)

  20 Jan 2010; Daniel Robbins <drobbins@funtoo.org> +coreboot-1.3.ebuild:
  New bug fix and maintenance release.
