@@ -1,6 +1,8 @@
+DIST boot-update-1.4.10.tar.bz2 26949 RMD160 477112d76fd7ef0673dbf744a87bf0198aab1eed SHA1 4065ec8edf4cc02e353671062665e7cd7ef8c3f5 SHA256 c0c71929f50b1fbf9f235052b1be415a83fbb14e0b48b2d800281f4fc59bc3bf
 DIST boot-update-1.4.8.tar.bz2 24564 RMD160 993255e21160c77823c60dcb7d51a3b8068dc955 SHA1 bc1a4c4f030cee39c36efa5d163b3779a70502bc SHA256 2a67d9aa1ecfcea8dcdb3bb9f86b0d0d79aadc83ddf363cb69d806e290429c90
 DIST boot-update-1.4.9.tar.bz2 24678 RMD160 e9e6752db25eb7887e6ff73196c5fd701c4bcdfe SHA1 bb6a5b40da27e8564c7ea24f6ca25cda473c7627 SHA256 781f90756b4f1bcc2c774d7a8b3a5bc9c68c1d009a59abf1526016c0afcb84bf
+EBUILD boot-update-1.4.10.ebuild 908 RMD160 0691b0039fc798ac1f208bc96fd3c1fe9d6f9de9 SHA1 8642a15e3a4520602fd6c945a770fe70ca691995 SHA256 2ea93534b6bab51339a3046f6d222a62218a1cb988f02cb6ae95a58ea5917149
 EBUILD boot-update-1.4.8.ebuild 906 RMD160 a82d56e274fd432442e2d0fb4a9ccd1e265b9b71 SHA1 36b4556a75f28b3847045efe655092aaef405e40 SHA256 efe5d641897845fe7d18e7dc9adf775f894dc6c5f0d79484616463bbce2fea46
 EBUILD boot-update-1.4.9.ebuild 906 RMD160 a82d56e274fd432442e2d0fb4a9ccd1e265b9b71 SHA1 36b4556a75f28b3847045efe655092aaef405e40 SHA256 efe5d641897845fe7d18e7dc9adf775f894dc6c5f0d79484616463bbce2fea46
-MISC ChangeLog 2369 RMD160 41dcf13fa39222ec1ee62d53b12127aec1fbe6fe SHA1 3d618cce0df1aeac4a3dcce0f6b9863faf34b5bd SHA256 aabfc1a4bbe6233c67769127687149d80b5ff54418de1927f742e3a153ed20c6
+MISC ChangeLog 2526 RMD160 2b03de8268bcd6654e93d51ba0fd0ab755d0662c SHA1 ee498c1fdefddea4e548167230be300855cd219b SHA256 e4bc311700a28635b2b731c9e4b820ddc5bc855e9765b15556d2a542bc06bf9b
 MISC metadata.xml 160 RMD160 9b2a24f6eb82c9e97a4f4fc6c26c72416c696081 SHA1 47dc8b60bfd35fda25b6def994409acdba7dd561 SHA256 26d4522b7bb55fd6bb3c5e4aa2c84a744083b969a4bcd5eefd085e3fa727baf1
